--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 :root {
     --black: #171321;
-    --blue: #2384d9;
+    --blue: #032999;
     --lightgreen: #21bf65;
-    --dgreen: #1a9951;
     --yellowish: #f2ab27;
-    --hotyellowish: #f2c827;
     --redish: #f23d3d;
     --hotredish: #ff4040;
+    --purple: #7f00f5;
+    --olive: #516324;
     --white: #f2f1f0;
     --font-size: 1.125rem;
     --philosopher: Philosopher, sans-serif;
@@ -33,7 +33,8 @@ body {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
     margin: 0;
 }
 
@@ -46,8 +47,14 @@ a:hover {
     text-decoration: none;
 }
 
+img {
+    width: 100%;
+}
+
 #intro {
-    padding-bottom: 10rem;
+    padding: 4rem 1rem 10rem 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 #intro h2 {
@@ -70,30 +77,27 @@ a:hover {
     font-size: 4rem;
 }
 
+.bg-blue {
+    background-color: var(--blue);
+}
+
 #contact {
-    background-color: var(--yellowish);
-    color: var(--black);
+    background-color: var(--olive);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 3rem 0;
     text-align: center;
 }
 
 #contact p {
+    font-size: 1.5rem;
     max-width: 30ch;
 }
 
 #contact p:last-child {
     margin-top: 3rem;
-}
-
-#contact a {
-    background-color: var(--redish);
-    color: var(--white);
-    font-size: 2rem;
-    padding: 1rem;
-    text-decoration: none;
 }
 
 nav {
@@ -149,6 +153,7 @@ nav [class*="fa-"]:hover {
     color: white;
     border-radius: 5px;
     font-size: var(--font-size);
+    font-family: var(--mulish);
     padding: 0.5rem;
     text-decoration: none;
 }
@@ -159,6 +164,7 @@ nav [class*="fa-"]:hover {
 }
 
 footer {
+    padding: 4rem 0;
     text-align: center;
 }
 
@@ -173,9 +179,102 @@ footer ul {
     gap: 3rem;
 }
 
-/* footer a {
+.gradient-border-top {
+    border-top: 2px solid transparent;
+    border-image-source: linear-gradient(
+        90deg,
+        rgba(242, 171, 39, 1) 0%,
+        rgba(242, 61, 61, 1) 100%
+    );
+    border-image-slice: 1;
+}
+
+#projects {
+    padding: 4rem 1rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+#projects h2 {
+    font-size: 2.5rem;
+    margin-bottom: calc(2.5rem * 1.5);
+}
+
+#projects h3 {
     color: var(--lightgreen);
-} */
+}
+
+#projects h4 {
+    font-size: 1rem;
+    font-family: var(--mulish);
+}
+
+.black-box {
+    background-color: var(--black);
+    padding: 1rem;
+    border-radius: 10px;
+    color: var(--white);
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+#projects ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    gap: 1rem;
+    font-size: 1rem;
+}
+
+#projects img {
+    margin: 2rem 0 4rem 0;
+    border-left: 1px solid var(--lightgreen);
+    border-top: 1px solid var(--lightgreen);
+    border-radius: 25px;
+    padding: 1rem;
+}
+
+@media (min-width: 550px) {
+    #projects article {
+        display: grid;
+        grid-template-columns: repeat(10, 1fr);
+        gap: 1rem;
+    }
+
+    #projects article img {
+        grid-row: 1/2;
+        grid-column: 1/6;
+    }
+
+    #projects article .text {
+        grid-row: 1/2;
+        grid-column: 5/11;
+        order: 2;
+        text-align: right;
+    }
+
+    #projects article ul {
+        justify-content: flex-end;
+    }
+
+    #projects article:nth-child(2n) .text {
+        grid-column: 1/7;
+        order: 1;
+        text-align: left;
+    }
+
+    #projects article:nth-child(2n) img {
+        grid-row: 1/2;
+        grid-column: 6/11;
+    }
+
+    #projects article:nth-child(2n) ul {
+        justify-content: flex-start;
+    }
+}
 
 @media (min-width: 850px) {
     nav {
