--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,12 @@ img {
     width: 100%;
 }
 
+.about-pic {
+    filter: grayscale(100%);
+    height: 400px;
+    object-fit: contain;
+}
+
 #intro {
     padding: 4rem 1rem 10rem 1rem;
     max-width: 1200px;
@@ -229,6 +235,9 @@ footer ul {
     font-size: 1rem;
 }
 
+#projects ul li {
+}
+
 #projects img {
     margin: 2rem 0 4rem 0;
     border-left: 1px solid var(--lightgreen);
@@ -246,33 +255,33 @@ footer ul {
 
     #projects article img {
         grid-row: 1/2;
-        grid-column: 1/6;
+        grid-column: 5/11;
     }
 
     #projects article .text {
         grid-row: 1/2;
-        grid-column: 5/11;
+        grid-column: 1/6;
         order: 2;
-        text-align: right;
+        text-align: left;
     }
 
     #projects article ul {
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
 
     #projects article:nth-child(2n) .text {
-        grid-column: 1/7;
+        grid-column: 6/11;
         order: 1;
-        text-align: left;
+        text-align: right;
     }
 
     #projects article:nth-child(2n) img {
         grid-row: 1/2;
-        grid-column: 6/11;
+        grid-column: 1/7;
     }
 
     #projects article:nth-child(2n) ul {
-        justify-content: flex-start;
+        justify-content: flex-end;
     }
 }
 
