--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
     --black: #171321;
-    --blue: #032999;
+    --blue: #032CA6;
     --lightblue: #6507FF;
     --green: #005C41;
     --lightgreen: #21bf65;
@@ -94,7 +94,7 @@ img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3rem 0;
+    padding: 3rem 1rem;
     text-align: center;
 }
 
@@ -203,6 +203,18 @@ footer ul {
     margin: 0 auto;
 }
 
+#about article {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+} 
+
+#about article .text {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
 #about h2, #projects h2 {
     font-size: 2.5rem;
     margin-bottom: calc(2.5rem * 1.5);
@@ -267,12 +279,6 @@ footer ul {
     #about article {
         display: flex;
         flex-direction: row-reverse;
-        gap: 1rem;
-    }
-
-    #about article .text {
-        display: flex;
-        flex-direction: column;
         gap: 1rem;
     }
 
