--- a/css/style.css
+++ b/css/style.css
@@ -100,14 +100,13 @@ img {
 }
 
 #contact h2 {
-    font-size: 2.5rem;;
+    font-size: 2.5rem;
 }
 
 #contact p {
     font-size: 1.5rem;
     max-width: 30ch;
 }
-
 
 nav {
     font-family: var(--mulish);
@@ -184,7 +183,7 @@ nav li:last-child a {
 .button:hover {
     color: var(--blue);
     background-color: var(--hotredish);
-    transform: scale(1.0.5);
+    transform: scale(1.5);
 }
 
 footer {
@@ -205,11 +204,17 @@ footer ul {
 
 .gradient-border-top {
     border-top: 2px solid transparent;
-    border-image-source: linear-gradient(90deg, #3ee3e4 33%, #2ee6b1 66%, #d11ac9 100%);
+    border-image-source: linear-gradient(
+        90deg,
+        #3ee3e4 33%,
+        #2ee6b1 66%,
+        #d11ac9 100%
+    );
     border-image-slice: 1;
 }
 
-#about, #projects {
+#about,
+#projects {
     padding: 4rem 1rem;
     max-width: 1200px;
     margin: 0 auto;
@@ -220,30 +225,34 @@ footer ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-} 
+}
 
 #about article .text {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-    }
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-#about h2, #projects h2 {
+#about h2,
+#projects h2 {
     font-size: 2.5rem;
     margin-bottom: calc(2.5rem * 1.5);
 }
 
-#about h3, #projects h3 {
+#about h3,
+#projects h3 {
     color: var(--lightgreen);
     font-size: 1.5rem;
 }
 
-#about h4, #projects h4 {
+#about h4,
+#projects h4 {
     font-size: 1rem;
     font-family: var(--mulish);
 }
 
-.black-box, #about .black-box ul {
+.black-box,
+#about .black-box ul {
     background-color: var(--black);
     padding: 1rem;
     border-radius: 10px;
@@ -257,7 +266,8 @@ footer ul {
     display: block;
 }
 
-#about ul, #projects ul {
+#about ul,
+#projects ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -270,13 +280,14 @@ footer ul {
 
 #about img {
     width: 300px;
-} 
+}
 
 #about p {
     margin: 0;
 }
 
-#about img, #projects img {
+#about img,
+#projects img {
     margin: 2rem 0 4rem 0;
     border-left: 1px solid var(--lightgreen);
     border-top: 1px solid var(--lightgreen);
@@ -286,6 +297,17 @@ footer ul {
 
 #about article img {
     margin: 0 auto;
+}
+
+.text [class*="fa-"] {
+    font-size: 1.5rem;
+    color: var(--hotredish);
+    margin-top: 1rem;
+    transition: all 0.2s ease-in-out;
+}
+
+.text [class*="fa-"]:hover {
+    color: var(--yellowish);
 }
 
 @media (min-width: 768px) {
