--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ img {
     width: 100%;
 }
 
+header {
+    margin-bottom: 4rem;
+}
+
 .about-pic {
     filter: grayscale(100%);
     height: 400px;
@@ -62,7 +66,7 @@ img {
 }
 
 #intro {
-    padding: 4rem 1rem 10rem 1rem;
+    padding: 0 1rem 10rem 1rem;
     max-width: 1200px;
     margin: 0 auto;
 }
